--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "async": "^2.1.5",
     "azure-storage": "^2.0.0",
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "multiparty": "^4.1.3"
   }
